fixed spacing issue on weight

--- a/apps/gym/src/app/(user)/weight/Weight.module.css
+++ b/apps/gym/src/app/(user)/weight/Weight.module.css
@@ -16,6 +16,7 @@
   padding: 20px 0;
   width: 95%;
   margin: auto;
+  gap: 30px;
 }
 
 .add_btn_div {
